force-app/main/default/objects/Order/fields/Accnt_Order__c.field-meta.xml
<CustomField>
    <fullName>Accnt_Order__c</fullName>
    <label>Accnt Order #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>