force-app/main/default/objects/Order/fields/Case_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Formula__c</fullName>
    <formula>Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number(Formula)</label>
    <type>Text</type>
</CustomField>