force-app/main/default/objects/Order/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Client Request</fullName>
            </value>
            <value>
                <fullName>Complete Reconfiguration</fullName>
            </value>
            <value>
                <fullName>CRTC</fullName>
            </value>
            <value>
                <fullName>Direct Wire</fullName>
            </value>
            <value>
                <fullName>Docking Station</fullName>
            </value>
            <value>
                <fullName>Field Transfer</fullName>
            </value>
            <value>
                <fullName>Headset</fullName>
            </value>
            <value>
                <fullName>Help Desk Request</fullName>
            </value>
            <value>
                <fullName>Home Office Request</fullName>
            </value>
            <value>
                <fullName>Internal Transaction</fullName>
            </value>
            <value>
                <fullName>IT Request</fullName>
            </value>
            <value>
                <fullName>l</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Lost/Stolen</fullName>
            </value>
            <value>
                <fullName>Mobile Device</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>New Equipment</fullName>
            </value>
            <value>
                <fullName>New Hire Configuration</fullName>
            </value>
            <value>
                <fullName>New Hire - Refurbs</fullName>
            </value>
            <value>
                <fullName>Order Category</fullName>
            </value>
            <value>
                <fullName>Password Document</fullName>
            </value>
            <value>
                <fullName>POA No-Show</fullName>
            </value>
            <value>
                <fullName>POA Request</fullName>
            </value>
            <value>
                <fullName>POA Return to Inventory</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>