force-app/main/default/objects/Order/fields/CLINIC_ID__c.field-meta.xml
<CustomField>
    <fullName>CLINIC_ID__c</fullName>
    <formula>Case__r.CLINIC_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLINIC ID</label>
    <type>Text</type>
</CustomField>