force-app/main/default/objects/Order/fields/Closed_Order_Flg__c.field-meta.xml
<CustomField>
    <fullName>Closed_Order_Flg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Order Flg</label>
    <type>Checkbox</type>
</CustomField>