force-app/main/default/objects/Order/fields/Glovia_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Glovia_Order_Status__c</fullName>
    <label>Glovia Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Awaiting Equipment</fullName>
            </value>
            <value>
                <fullName>Incomplete Build</fullName>
            </value>
            <value>
                <fullName>In Repair</fullName>
            </value>
            <value>
                <fullName>Approval Hold</fullName>
            </value>
            <value>
                <fullName>Pending Return</fullName>
            </value>
            <value>
                <fullName>Pull Inventory</fullName>
            </value>
            <value>
                <fullName>Future Ship</fullName>
            </value>
            <value>
                <fullName>SOC Future Ship</fullName>
            </value>
            <value>
                <fullName>Ship from Pittston</fullName>
            </value>
            <value>
                <fullName>Ship From SOC</fullName>
            </value>
            <value>
                <fullName>Partial Shipment</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Pending Invoice Approval</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>