force-app/main/default/objects/Order/fields/Glovia_Receive_Waybill__c.field-meta.xml
<CustomField>
    <fullName>Glovia_Receive_Waybill__c</fullName>
    <label>Glovia Receive Waybill #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>