force-app/main/default/objects/Order/fields/Glovia_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Glovia_Report_URL__c</fullName>
    <label>Glovia Report URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>