force-app/main/default/objects/Order/fields/Glovia_RMA_Order__c.field-meta.xml
<CustomField>
    <fullName>Glovia_RMA_Order__c</fullName>
    <label>Glovia RMA Order #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>