force-app/main/default/objects/Order/fields/Glovia_Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Glovia_Shipping_Carrier__c</fullName>
    <label>Glovia Shipping Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airborne</fullName>
            </value>
            <value>
                <fullName>Blue Dart Express</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>Emery</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>Federal Express</fullName>
            </value>
            <value>
                <fullName>MCR</fullName>
            </value>
            <value>
                <fullName>Sagawa Express</fullName>
            </value>
            <value>
                <fullName>SF Express</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>US Mail</fullName>
            </value>
            <value>
                <fullName>Yamato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>