force-app/main/default/objects/Order/fields/Glovia_Staging_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Glovia_Staging_Order_Id__c</fullName>
    <label>Glovia Staging Order Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>