force-app/main/default/objects/Order/fields/Glovia_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Glovia_Tracking__c</fullName>
    <label>Glovia Tracking #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>