force-app/main/default/objects/Order/fields/Legacy_Horizon_Order__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Horizon_Order__c</fullName>
    <label>Legacy Horizon Order #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>