force-app/main/default/objects/Order/fields/LineQty__c.field-meta.xml
<CustomField>
    <fullName>LineQty__c</fullName>
    <label>LineQty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>