force-app/main/default/objects/Order/fields/Monthly_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Sub_Total__c</fullName>
    <label>Monthly Sub Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>