force-app/main/default/objects/Order/fields/Moved_to_Transaction_Workbook__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Transaction_Workbook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moved to Transaction Workbook</label>
    <type>Checkbox</type>
</CustomField>