force-app/main/default/objects/Order/fields/Restricted_Country__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Country__c</fullName>
    <label>Restricted Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>