force-app/main/default/objects/Order/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <label>Revision No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>