force-app/main/default/objects/Order/fields/Saturday_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday Delivery</label>
    <type>Checkbox</type>
</CustomField>