force-app/main/default/objects/Order/fields/Ship_Via__c.field-meta.xml
<CustomField>
    <fullName>Ship_Via__c</fullName>
    <label>Ship Via</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Glovia_Shipping_Carrier__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>02R02 FX Ground Home</fullName>
            </value>
            <value>
                <fullName>A01-ABX Exp</fullName>
            </value>
            <value>
                <fullName>A01R-ABX Exp W/Ret Label</fullName>
            </value>
            <value>
                <fullName>A01S-ABX Exp Sat Del</fullName>
            </value>
            <value>
                <fullName>A01SR-ABX Exp w/Ret Label</fullName>
            </value>
            <value>
                <fullName>A02-ABX Exp Ltr</fullName>
            </value>
            <value>
                <fullName>A02R-ABX Exp Ltr W/Ret Label</fullName>
            </value>
            <value>
                <fullName>A03-ABX 2Day</fullName>
            </value>
            <value>
                <fullName>A03R-ABX 2Day W/Ret Label</fullName>
            </value>
            <value>
                <fullName>A04-ABX 2Day Ltr</fullName>
            </value>
            <value>
                <fullName>A04R-ABX 2Day Ltr W/Ret Label</fullName>
            </value>
            <value>
                <fullName>A05-ABX Ground</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Airborne</fullName>
            </value>
            <value>
                <fullName>D01-DHL Worldwide Pri Exp</fullName>
            </value>
            <value>
                <fullName>D01-DHL Worldwide Pri Exp(NON-EU)</fullName>
            </value>
            <value>
                <fullName>D04-DHL Ovrnite PCK</fullName>
            </value>
            <value>
                <fullName>D04R-DHL Ovrnite PCK w/RL</fullName>
            </value>
            <value>
                <fullName>D04S-DHL Sat PCK</fullName>
            </value>
            <value>
                <fullName>D04SR-DHL Sat PCK w/RL</fullName>
            </value>
            <value>
                <fullName>D05-DHL Ovrnite Let</fullName>
            </value>
            <value>
                <fullName>D05R-DHL Ovrnite Let w/RL</fullName>
            </value>
            <value>
                <fullName>D05S-DHL Sat Let</fullName>
            </value>
            <value>
                <fullName>D05SR-DHL Sat Let w/RL</fullName>
            </value>
            <value>
                <fullName>D10-DHL USA 2nd Day</fullName>
            </value>
            <value>
                <fullName>D1-DHL DOMESTIC EXPRESS</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>ECONOMY SELECT</fullName>
            </value>
            <value>
                <fullName>F01-FX Pri Ovnght</fullName>
            </value>
            <value>
                <fullName>F01S-FX Saturday Del</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>