force-app/main/default/objects/Order/fields/Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account__c</fullName>
    <formula>Case__r.Contact_Studies__r.Study__r.Shipping_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Account #</label>
    <type>Text</type>
</CustomField>