force-app/main/default/objects/Order/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <formula>Case__r.Sponsor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor</label>
    <type>Text</type>
</CustomField>