force-app/main/default/objects/Order/fields/Status_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Status_As_Of__c</fullName>
    <label>Status As Of</label>
    <type>DateTime</type>
</CustomField>