force-app/main/default/objects/Order/fields/Study_Id__c.field-meta.xml
<CustomField>
    <fullName>Study_Id__c</fullName>
    <formula>Case__r.Contact_Studies__r.Study__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Id</label>
    <type>Text</type>
</CustomField>