force-app/main/default/objects/Order/fields/Study_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Study_Legacy_Id__c</fullName>
    <formula>Case__r.Contact_Studies__r.Study__r.Legacy_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Legacy Id</label>
    <type>Text</type>
</CustomField>