force-app/main/default/objects/Order/fields/Study_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Study_Protocol__c</fullName>
    <formula>Case__r.Contact_Studies__r.Study__r.Protocol__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Protocol #</label>
    <type>Text</type>
</CustomField>