force-app/main/default/objects/Order/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Dalian</fullName>
            </value>
            <value>
                <fullName>Fukuoka</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Pittston</fullName>
            </value>
            <value>
                <fullName>POC-Pittston</fullName>
            </value>
            <value>
                <fullName>Sao Leopoldo</fullName>
            </value>
            <value>
                <fullName>Sofia</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Seaport</fullName>
            </value>
            <value>
                <fullName>Waltham</fullName>
            </value>
            <value>
                <fullName>Wayne</fullName>
            </value>
            <value>
                <fullName>Data CD</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>