force-app/main/default/objects/Order/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>