force-app/main/default/objects/Order/recordTypes/HC_Clinical.recordType-meta.xml
<RecordType>
    <fullName>HC_Clinical</fullName>
    <active>true</active>
    <label>HC Clinical</label>
</RecordType>