force-app/main/default/objects/Order/recordTypes/HC_Pharma.recordType-meta.xml
<RecordType>
    <fullName>HC_Pharma</fullName>
    <active>false</active>
    <label>HC Pharma</label>
</RecordType>